# oh-my-rust

./: README.md
note-rest/: Cargo.toml
note-rest/migrations/: 20241122214854_create_notes_table.down.sql
note-rest/src/: handler.rs  main.rs  route.rs  schema.rs
